<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reunion_list.AddReunionActivity">


    <LinearLayout
        android:id="@+id/layout_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <include layout="@layout/tool_bar" />

        <EditText
            android:id="@+id/heure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="heure"
            android:inputType="datetime"
            android:layout_column="0">

        </EditText>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="salles : "
                android:textSize="18sp"
                android:padding="12dp"/>

            <Spinner
                android:id="@+id/spinner_lieu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:padding="22dp">
            </Spinner>


        </GridLayout>
        <EditText
            android:id="@+id/sujet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:hint="sujet"
            android:layout_column="0">

        </EditText>

        <LinearLayout
            android:id="@+id/layout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:hint="mail"
                android:inputType="textEmailAddress"
                android:layout_weight="1">

            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/btn_add_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_weight="1"
            android:text="add email">

        </Button>
        <Button
            android:id="@+id/creer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="save">

        </Button>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>