<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    style="@style/AppTheme.Toolbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:id="@+id/toolbar_back"
            android:layout_gravity="center_vertical"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/toolbar_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:layout_marginHorizontal="7dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/white"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/recherche"

            android:layout_marginHorizontal="9dp"
            android:visibility="invisible"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/toolbar_recherche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp">

        </ImageView>

    </LinearLayout>

</com.google.android.material.appbar.MaterialToolbar>