...
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reunion_sujet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />
...
